# EpiNOAA-Python

./: 202307.parquet  Makefile  README.md  compare_weather_variable_dfs.py  config.py  pyproject.toml  read_202307.py
OLD/: MONTHLY_CHECK.ipynb  data_collection.ipynb  df_yield_weather_20_05_14h00m.csv
_corn_yield_data/: df_corn_yield.csv  format_corn_yield_data.ipynb
_noaa_climdiv_local/: county-to-climdivs.txt  merge_yield_monthly_weather.ipynb  webscraper.py
_noaa_nclimgrid_importer/: get_data_importer.py  nclimgrid_importer.py  test_importer.py
_noaa_nclimgrid_importer/old/: get_data.py  harris_county.py
_noaa_nclimgrid_local/: get_compare_months_local  get_data_local.py
_noaa_nclimgrid_local/1951/: 195101.parquet  195103.parquet  195104.parquet  195105.parquet  195106.parquet  195107.parquet  195108.parquet  195109.parquet  195110.parquet  195111.parquet  195112.parquet
_noaa_nclimgrid_local/1952/: 195201.parquet  195202.parquet  195203.parquet  195204.parquet  195205.parquet  195206.parquet  195207.parquet  195208.parquet  195209.parquet  195210.parquet  195211.parquet  195212.parquet
_noaa_nclimgrid_local/1953/: 195301.parquet  195302.parquet  195303.parquet  195304.parquet  195305.parquet  (+7 more)
compare_scripts/: compare_GS_climdiv_nclimgrid.ipynb  compare_MONTHS_climdiv_nclimgrid.ipynb  compare_local_vs_importer.py
docs/: New Potential Sources.txt  Sources data.txt  mkdocs.yml
nclimgrid_importer/: get_data_v2.py  get_data_v3.py  harris_county.py  nclimgrid_importer.py  temp_diff.py  test_importer.py
test_data/: 195102.parquet  read_parquet.py
(+867 files in other folders)
