[tool.poetry]
name = "nclimgrid-plotting"
version = "0.1.0"
description = "Scripts to support Deke Arndt's Plotting of NClimGrid Data"
authors = ["Denis <dwillett@cicsnc.org>"]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.13.22"
s3fs = "^2022.3.0"
commitizen = "^2.23.0"
pyarrow = "^7.0.0"
pendulum = "^2.1.2"
pandas = "^1.4.2"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
